# inch

./: .gitignore  BaseChecker.cpp  BaseChecker.h  CMakeLists.txt  DeclIndentDefiner.cpp  DeclIndentDefiner.h  DeclIndentsChecker.cpp  DeclIndentsChecker.h  Position.cpp  Position.h  PositionManager.cpp  PositionManager.h  StmtIndentsChecker.cpp  StmtIndentsChecker.h  main.cpp
